# tree-sitter-tactus

./: .gitignore  Cargo.toml  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-tactus.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tactus/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTactus/: tactus.h
bindings/swift/TreeSitterTactusTests/: TreeSitterTactusTests.swift
src/: grammar.json  node-types.json  scanner.c
test/corpus/: declarations.txt  macros.txt  tactic_blocks.txt
